# internal/docs/swagger.yaml
@@ -26,6 +26,10 @@ definitions:
       cover_image:
         maxLength: 500
         type: string
+      slug:
+        maxLength: 200
+        minLength: 1
+        type: string
       status:
         enum:
         - draft
@@ -98,6 +102,10 @@ definitions:
         type: string
       cover_image:
         maxLength: 500
+        type: string
+      slug:
+        maxLength: 200
+        minLength: 1
         type: string
       status:
         enum:
